--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'com.auth0:java-jwt:3.10.3'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	/* JWT */
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	//	implementation 'com.auth0:java-jwt:3.10.3'
 }
 
 tasks.named('test') {
