refactor : enrollment 과정에서 유저가 없더라도 끊기지 않게 변경하고 Log 추가

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
 	/* SMTP */
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	/* log4j */
+	implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
 }
 
 tasks.named('test') {
