--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 
 	/* log4j */
 	implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+
+	/* swagger */
+	implementation("org.springdoc:springdoc-openapi-ui:1.6.11")
 }
 
 tasks.named('test') {
