test : prod, dev, test 환경 분리 (#8)

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 /src/**/application.yml
-/src/**/application-dev.yml
+/src/**/application*.yml
 
 ### Project ###
 /src/main/java/gdsc/binaryho/imhere/initDB.java
