--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	all {
+		exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+	}
 }
 
 repositories {
@@ -44,7 +47,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 	/* log4j */
-	implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+	implementation("org.springframework.boot:spring-boot-starter-log4j2")
 
 	/* swagger */
 	implementation("org.springdoc:springdoc-openapi-ui:1.6.11")
