test : 테스트 전용 구현체를 의존하는 객체들의 초기화를 간편하게 만들고 가독성을 높히기 위한 TestContainer 구현 (#35)

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
 	/* SMTP */
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
