[refactor] Build 과정에 gradlew 권한 부여 명령어 추가 #88 (#93)
* feat : PR open, reopen, synchronized, closed시
gradle build test를 수행하는 job 추가 (#88)

* refactor : build 과정에 gradlew 권한 부여 명령어 추가 (#88)

--- a/.github/workflows/pull-request-gradle-build-test.yml
+++ b/.github/workflows/pull-request-gradle-build-test.yml
@@ -21,8 +21,8 @@ jobs:
         with:
           filters: |
             application:
-              - 'build.gradle'
-              - 'src/**'
+            - 'build.gradle'
+            - 'src/**'
 
       - name: JDK 설치
         if: steps.changes.outputs.application == 'true'
@@ -31,6 +31,10 @@ jobs:
           distribution: zulu
           java-version: 11
           cache: 'gradle'
+
+      - name: gradlew 권한 부여
+        run: chmod +x ./gradlew
+        
       - name: Gradle Build
         if: steps.changes.outputs.application == 'true'
         run: |
