--- a/.github/workflows/pull-request-gradle-build-test.yml
+++ b/.github/workflows/pull-request-gradle-build-test.yml
@@ -37,5 +37,7 @@ jobs:
         
       - name: Gradle Build
         if: steps.changes.outputs.application == 'true'
+        env:
+          JASYPT_ENCRYPTION_PASSWORD: ${{ secrets.PROPERTY_ENCRYPTION_PASSWORD }}
         run: |
           ./gradlew build --no-build-cache
