--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -70,4 +70,4 @@ origin:
 jasypt:
   encryptor:
     bean: propertyEncryptor
-  secret-key: ${JASYPT_SECRET_KEY}
+  secret-key: ${JASYPT_ENCRYPTION_PASSWORD}
