--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,9 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 
 	/* Security */
-	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 	/* Lombok */
 	compileOnly 'org.projectlombok:lombok'
