--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,14 @@ spring:
   profiles:
     active: test
 
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: ENC(cwYhhVQPF7EA6AsPSNX7BkV4o1Q+kWM1SqFh6SfDoxQ=)
+            client-secret: ENC(sI6HRt2XDATOJWZvrUqzqrdtO++dR9ttm69l3hwsJX8=)
+
   jpa:
     open-in-view: false
 
